--- a/package.json
+++ b/package.json
@@ -1,63 +1,45 @@
 {
-  "name": "meilisearch-docsearch",
-  "version": "0.6.0",
-  "description": "A quick search component for meilisearch, inspired by algolia/docsearch.",
-  "license": "MIT or Apache-2.0",
-  "files": [
-    "dist",
-    "LICENSE_*"
-  ],
-  "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.js"
-    },
-    "./solid": {
-      "types": "./dist/index.solid.d.ts",
-      "import": "./dist/index.solid.jsx",
-      "require": "./dist/index.solid.jsx",
-      "default": "./dist/index.solid.jsx"
-    },
-    "./css": "./dist/index.css",
-    "./css/variables": "./dist/variables.css",
-    "./css/button": "./dist/button.css",
-    "./css/modal": "./dist/modal.css"
-  },
-  "scripts": {
-    "prepublishOnly": "pnpm build",
-    "build": "tsup",
-    "watch": "tsup --watch",
-    "ts:check": "tsc --noEmit",
-    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,html,css}\" --ignore-path .gitignore",
-    "format:check": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,html,css}\" --ignore-path .gitignore"
-  },
-  "dependencies": {
-    "meilisearch": "0.38.0",
-    "solid-js": "1.8.17"
-  },
-  "devDependencies": {
-    "covector": "0.10.2",
-    "esbuild": "0.20.2",
-    "esbuild-plugin-solid": "0.5.0",
-    "prettier": "3.2.5",
-    "tsup": "8.0.2",
-    "typescript": "5.4.5"
-  },
-  "resolutions": {
-    "semver": ">=7.5.2"
-  },
-  "keywords": [
-    "meilisearch",
-    "search",
-    "docsearch",
-    "autocomplete",
-    "docs",
-    "quicksearch",
-    "quicksearchbar"
-  ]
+	"dependencies": {
+		"meilisearch": "0.38.0"
+	},
+	"description": "A quick search component for meilisearch, inspired by algolia/docsearch.",
+	"devDependencies": {
+		"covector": "0.10.2",
+		"esbuild": "0.20.2",
+		"esbuild-plugin-solid": "0.5.0",
+		"tsup": "8.0.2"
+	},
+	"exports": {
+		".": {
+			"default": "./dist/index.js",
+			"import": "./dist/index.js",
+			"require": "./dist/index.cjs",
+			"types": "./dist/index.d.ts"
+		},
+		"./css": "./dist/index.css",
+		"./css/button": "./dist/button.css",
+		"./css/modal": "./dist/modal.css",
+		"./css/variables": "./dist/variables.css",
+		"./solid": {
+			"default": "./dist/index.solid.jsx",
+			"import": "./dist/index.solid.jsx",
+			"require": "./dist/index.solid.jsx",
+			"types": "./dist/index.solid.d.ts"
+		}
+	},
+	"files": [
+		"dist",
+		"LICENSE_*"
+	],
+	"main": "./dist/index.js",
+	"name": "meilisearch-docsearch",
+	"resolutions": {
+		"semver": ">=7.5.2"
+	},
+	"scripts": {
+		"build": "tsup",
+		"prepublishOnly": "pnpm build",
+		"ts:check": "tsc --noEmit"
+	},
+	"types": "./dist/index.d.ts"
 }
