--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,40 @@
 {
+	"author": {
+		"email": "Land@PlayForm.Cloud",
+		"name": "🌆 — Land —",
+		"url": "HTTPS://Land.PlayForm.Cloud"
+	},
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/MeiliSearchDocsearch/issues"
+	},
 	"dependencies": {
 		"meilisearch-docsearch": "workspace:"
 	},
-	"devDependencies": {},
+	"devDependencies": {
+		"@playform/build": "0.0.7",
+		"@playform/document": "0.0.6"
+	},
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/MeiliSearchDocsearch#readme",
+	"keywords": [
+		"land"
+	],
+	"license": "SEE LICENSE IN LICENSE",
 	"name": "example",
+	"private": false,
+	"publishConfig": {
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/MeiliSearchDocsearch.git"
+	},
 	"scripts": {
+		"Document": "Document 'Source/**/*.ts'",
 		"build": "vite build",
 		"dev": "vite",
+		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"preview": "vite preview"
-	}
+	},
+	"type": "module",
+	"version": "0.0.1"
 }
