--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
+	"author": {
+		"email": "Land@PlayForm.Cloud",
+		"name": "🌆 — Land —",
+		"url": "HTTPS://Land.PlayForm.Cloud"
+	},
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/MeiliSearchDocsearch/issues"
+	},
 	"dependencies": {
 		"meilisearch": "0.38.0"
 	},
 	"description": "A quick search component for meilisearch, inspired by algolia/docsearch.",
 	"devDependencies": {
+		"@playform/build": "0.0.7",
+		"@playform/document": "0.0.6",
 		"covector": "0.10.2",
 		"esbuild": "0.20.2",
 		"esbuild-plugin-solid": "0.5.0",
@@ -31,15 +41,31 @@
 		"dist",
 		"LICENSE_*"
 	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/MeiliSearchDocsearch#readme",
+	"keywords": [
+		"land"
+	],
+	"license": "SEE LICENSE IN LICENSE",
 	"main": "./dist/index.js",
 	"name": "meilisearch-docsearch",
+	"private": false,
+	"publishConfig": {
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/MeiliSearchDocsearch.git"
+	},
 	"resolutions": {
 		"semver": ">=7.5.2"
 	},
 	"scripts": {
+		"Document": "Document 'Source/**/*.ts'",
 		"build": "tsup",
-		"prepublishOnly": "pnpm build",
+		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"ts:check": "tsc --noEmit"
 	},
-	"types": "./dist/index.d.ts"
+	"type": "module",
+	"types": "./dist/index.d.ts",
+	"version": "0.0.1"
 }
