--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-	"author": {
-		"email": "Land@PlayForm.Cloud",
-		"name": "🌆 — Land —",
-		"url": "HTTPS://Land.PlayForm.Cloud"
-	},
+	"name": "meilisearch-docsearch",
+	"version": "0.0.1",
+	"private": false,
+	"description": "A quick search component for meilisearch, inspired by algolia/docsearch.",
+	"keywords": [
+		"land"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/MeiliSearchDocsearch#readme",
 	"bugs": {
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/MeiliSearchDocsearch/issues"
 	},
-	"dependencies": {
-		"meilisearch": "0.38.0"
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/MeiliSearchDocsearch.git"
 	},
-	"description": "A quick search component for meilisearch, inspired by algolia/docsearch.",
-	"devDependencies": {
-		"@playform/build": "0.0.7",
-		"@playform/document": "0.0.6",
-		"covector": "0.10.2",
-		"esbuild": "0.20.2",
-		"esbuild-plugin-solid": "0.5.0",
-		"tsup": "8.0.2"
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🌆 — Land —",
+		"email": "Land@PlayForm.Cloud",
+		"url": "HTTPS://Land.PlayForm.Cloud"
 	},
+	"type": "module",
 	"exports": {
 		".": {
 			"default": "./dist/index.js",
@@ -37,35 +39,33 @@
 			"types": "./dist/index.solid.d.ts"
 		}
 	},
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"files": [
 		"dist",
 		"LICENSE_*"
 	],
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/MeiliSearchDocsearch#readme",
-	"keywords": [
-		"land"
-	],
-	"license": "SEE LICENSE IN LICENSE",
-	"main": "./dist/index.js",
-	"name": "meilisearch-docsearch",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/MeiliSearchDocsearch.git"
-	},
-	"resolutions": {
-		"semver": ">=7.5.2"
-	},
 	"scripts": {
 		"Document": "Document 'Source/**/*.ts'",
 		"build": "tsup",
 		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"ts:check": "tsc --noEmit"
 	},
-	"type": "module",
-	"types": "./dist/index.d.ts",
-	"version": "0.0.1"
+	"resolutions": {
+		"semver": ">=7.5.2"
+	},
+	"dependencies": {
+		"meilisearch": "0.38.0"
+	},
+	"devDependencies": {
+		"@playform/build": "0.0.7",
+		"@playform/document": "0.0.6",
+		"covector": "0.10.2",
+		"esbuild": "0.20.2",
+		"esbuild-plugin-solid": "0.5.0",
+		"tsup": "8.0.2"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
