--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"files": [
-		"dist",
-		"LICENSE_*"
-	],
+	"files": ["dist", "LICENSE_*"],
 	"scripts": {
 		"build": "tsup",
 		"prepublishOnly": "pnpm build",
@@ -38,7 +35,7 @@
 	},
 	"devDependencies": {
 		"covector": "0.10.2",
-		"esbuild": "0.21.3",
+		"esbuild": "0.21.4",
 		"esbuild-plugin-solid": "0.6.0",
 		"tsup": "8.0.2"
 	}
