--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
-	"name": "meilisearch-docsearch",
+	"dependencies": {
+		"meilisearch": "0.40.0"
+	},
 	"description": "A quick search component for meilisearch, inspired by algolia/docsearch.",
+	"devDependencies": {
+		"covector": "0.11.0",
+		"esbuild": "0.21.5",
+		"esbuild-plugin-solid": "0.6.0",
+		"tsup": "8.1.0"
+	},
 	"exports": {
 		".": {
 			"default": "./dist/index.js",
@@ -19,27 +27,19 @@
 			"types": "./dist/index.solid.d.ts"
 		}
 	},
-	"main": "./dist/index.js",
-	"types": "./dist/index.d.ts",
 	"files": [
 		"dist",
 		"LICENSE_*"
 	],
+	"main": "./dist/index.js",
+	"name": "meilisearch-docsearch",
+	"resolutions": {
+		"semver": ">=7.5.2"
+	},
 	"scripts": {
 		"build": "tsup",
 		"prepublishOnly": "pnpm build",
 		"ts:check": "tsc --noEmit"
 	},
-	"resolutions": {
-		"semver": ">=7.5.2"
-	},
-	"dependencies": {
-		"meilisearch": "0.40.0"
-	},
-	"devDependencies": {
-		"covector": "0.11.0",
-		"esbuild": "0.21.5",
-		"esbuild-plugin-solid": "0.6.0",
-		"tsup": "8.1.0"
-	}
+	"types": "./dist/index.d.ts"
 }
