--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 	"main": "./dist/index.js",
 	"name": "meilisearch-docsearch",
 	"resolutions": {
-		"semver": ">=7.5.2"
+		"semver": "7.5.2"
 	},
 	"scripts": {
 		"build": "tsup",
