--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
-	"dependencies": {
-		"meilisearch": "0.42.0"
-	},
+	"name": "meilisearch-docsearch",
 	"description": "A quick search component for meilisearch, inspired by algolia/docsearch.",
-	"devDependencies": {
-		"esbuild": "0.23.1",
-		"esbuild-plugin-solid": "0.6.0",
-		"tsup": "8.3.0"
-	},
 	"exports": {
 		".": {
 			"import": "./dist/index.js",
@@ -24,19 +17,26 @@
 			"types": "./dist/index.solid.d.ts"
 		}
 	},
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"files": [
 		"dist",
 		"LICENSE_*"
 	],
-	"main": "./dist/index.js",
-	"name": "meilisearch-docsearch",
-	"resolutions": {
-		"semver": ">=7.5.2"
-	},
 	"scripts": {
 		"build": "tsup",
 		"prepublishOnly": "pnpm build",
 		"ts:check": "tsc --noEmit"
 	},
-	"types": "./dist/index.d.ts"
+	"resolutions": {
+		"semver": ">=7.5.2"
+	},
+	"dependencies": {
+		"meilisearch": "0.42.0"
+	},
+	"devDependencies": {
+		"esbuild": "0.23.1",
+		"esbuild-plugin-solid": "0.6.0",
+		"tsup": "8.3.0"
+	}
 }
